add tests for mappers and JSON tests